# sdlc-tools

./: .gitignore  .sdlc.yml.example  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release-tag.yml
sdlc-tools/: README.md
sdlc-tools/src/sdlc_tools/: __init__.py  ai.py  client.py  config.py  html.py  log.py  report.py
sdlc-tools/tests/: test_ai.py  test_client.py  test_config.py  test_html.py  test_report.py  test_setup.py
src/sdlc_tools/: __init__.py  __main__.py  ai.py  analysis_pipeline.py  cli.py  client.py  config.py  git.py  html.py  prompt_loader.py  report.py  tagger.py  version_check.py
src/sdlc_tools/analyzers/: __init__.py  base_analyzer.py  risk_analyzer.py
src/sdlc_tools/prompts/: __init__.py  default.txt
tests/: conftest.py  test_ai.py  test_analysis_pipeline.py  test_client.py  test_git.py  test_init.py  test_prompt_loader.py  test_report.py  test_report_cli.py  test_report_generator.py  test_review_cli.py  test_risk_analyzer.py  test_setup.py  test_tagger.py
